Thu Jan  9 18:12:43 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_sql2string.c src/odbc/convert_tds2sql.c:
	* src/odbc/odbc.c src/odbc/unittests/date.c:
	- fix problem with SQL_C_TIMESTAMP

Thu Jan  9 16:17:10 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/date.c(added):
	- added test for date under ODBC (do not pass...)

Wed Jan  8 10:57:32 EST 2003    JK Lowden <jklowden@schemamania.org>
	* src/odbc/odbc.c added logging function for unimplemented options
	* src/tds/iconv.c added log of character set in iconv

Wed Jan  8 11:30:12 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- cleanup
	- workaround for a bug in MS ODBC DM
	- avoiding pointer to garbage data
	* src/tds/login.c:
	- cleanup

Tue Jan  7 21:34:56 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c src/odbc/odbc.c:
	- do not compiler ODBC3 code if not ODBC3
	- fix some error in SQLTables (missing parameters and quoting)

Tue Jan  7 20:53:38 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix some issue with SQLGetFunctions

Tue Jan  7 15:41:24 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c:
	- avoid free(NULL)
	* src/odbc/odbc.c:
	- rewrite function checking using some macro
	* win32/msvc6/FreeTDS.dsp:
	- add error.c

Tue Jan  7 11:25:00 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/common.c: small fix
	* src/odbc/unittests/print.c: finished

Mon Jan  6 22:41:37 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c:
	- fix error in SQLGetDiagRec not returning correct errors
	- add SQLGetDiagField
	* src/odbc/odbc.c:
	- enable SQLGetDiagField and SQLGetDiagRec
	* src/odbc/unittests/Makefile.am src/odbc/unittests/print.c(added):
	- add print test (unfinished)
	* src/odbc/unittests/common.c:
	- do not print garbage error
