@@ -1,3 +1,9 @@
+Fri Jan 10 10:25:36 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/convert_sql2string.c src/odbc/odbc_util.c:
+	- return SQL_REAL for SYBREAL, not SQL_FLOAT
+	- other small type handling
+	- some docs update
+
 Thu Jan  9 18:12:43 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* src/odbc/convert_sql2string.c src/odbc/convert_tds2sql.c:
 	* src/odbc/odbc.c src/odbc/unittests/date.c:
